test/zora/fixtures/plan_not_enough_fail_out.txt
TAP version 13
# Execute fewer tests than planned
ok 1 should be truthy
ok 2 should be truthy
file://$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Test ended before the planned number
          planned: 3
          actual: 2
          
    at Test.run (file://$TAPE/index.js:$LINE:$COL)
    at process.processTicksAndRejections (node:internal/process/task_queues:$LINE:$COL)
    at async TestRunner.run (file://$TAPE/index.js:$LINE:$COL)
